--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -195,6 +195,7 @@
   "static.dataentry.maxRange": "Please select date range within 36 months",
   "static.program.programmanager": "Program manager",
   "static.currency.currencysymbol": "Currency symbol",
+  "static.report.forecastErrorMonthlyFormula6nomonth": "A Forecast Error labeled ‘No months in this period contain both forecast and actual consumption’ indicates that there are no months in the selected time window that have both actual and forecast records in the same month.",
   "static.procurementagent.procurementagentdrafttosubmittime": "`Draft to Submitted` Lead Time (months)",
   "static.realm.realmCodeLength": "Enter realm display name (max 6 char)",
   "static.realm.minCountForMode": "Min Count for Mode",
@@ -344,6 +345,7 @@
   "static.fundingSource.selectFundingSource": "Select Funding Source",
   "static.tree.seeChildrenOf": "See children of",
   "static.loadDeleteProgram.loadDeleteProgram": "Download/Delete Program",
+  "static.problemReport.pendingapprovalDesc": "The submitted supply plan has not been reviewed. Once reviewed, the supply plan will be sent back as “Approved” or “Needs Revision.” If the supply plan does not need to be reviewed, it will be sent back as “No Review Needed.”",
   "static.report.lastmodifieddate": "Last modified date",
   "static.report.selectProgram": "Select Program and Version",
   "static.supplyPlan.multipleProcurementAgent": "Multiple Procurement Agents",
@@ -456,6 +458,7 @@
   "static.report.qatPID": "QAT Product ID",
   "static.common.planningUnits": "planning units",
   "static.ManageTree.Modeling": "Modeling",
+  "static.report.forecastErrorMonthlyFormulaupdate4": "A month with a",
   "static.extrapolation.missingTESAndARIMASuccess": "Missing Extrapolation for TES & ARIMA done successfully",
   "static.planningunit.gtinNo": "Only numbers allowed",
   "static.procurementAgentProcurementUnit.gtinText": "Enter GTIN",
@@ -494,6 +497,7 @@
   "static.ManageTree.BuildTree": "Manage Tree - Build Trees",
   "static.login.loginOnline": "Online",
   "static.versionSettings.confirmUpdate": "Note: If you changed the forecast period, you will be redirected for tree forecast calculations.",
+  "static.report.forecastErrorMonthlyFormulaupdate5": "A month with the forecast error in",
   "static.dataentry.conversionFactorTooltip": "User-created or auto-generated in the Alternate Reporting Unit screen. `*` will multiply and `/` will divide the Order Quantity (ARU) by the Conversion Factor",
   "static.report.problemTransDetails": "Problem Transaction Details",
   "static.supplyPlan.addNewInventory": "Add New Inventory Count",
@@ -678,6 +682,7 @@
   "static.whatIf.removePlannedShipments": "Remove Planned shipments",
   "static.message.duplicateOrg": "Duplicate organization code",
   "static.stockStatus.shipmentQtyTooltipEU": "Sum of selected programs’ & planning units’ shipment quantities after converting to EU",
+  "static.problemReport.noreviewneeded": "No Review Needed",
   "static.extrapolation.RangeOfObserved": "Stationary, where the range of observed values over time hover around an average. Models applied to such datasets may include",
   "static.supplyPlanFormula.inventoryTurns5L1": "Update the “plan by” setting in ",
   "static.user.agreement": "End User License Agreement",
@@ -800,6 +805,7 @@
   "static.dimension.dimensionName": "Dimension name",
   "static.program.programMaster": "Program",
   "static.module.forecastingModule": "FORECASTING MODULE",
+  "static.report.forecastErrorMonthlyFormula4thresholdper": "calculated forecast error is above the forecast error threshold percentage.",
   "static.technicalArea.technicalAreaCodeText": "Enter technical area code",
   "static.extrapolation.selectExtrapolationMethod": "Select the Extrapolation methods to be used",
   "static.supplyPlan.reorderInterval": "Reorder Interval (months)",
@@ -808,6 +814,7 @@
   "static.treeTable.tab1": "Aggregation/Number/Percentage Node",
   "static.NodeData.ModelingTransferTab": "Modeling/Transfer Tab",
   "static.extrapolation.SeeSections": "See sections 3 and 4 below for an explanation of the extrapolation methods and how to best choose methods for your forecast",
+  "static.report.forecastErrorMonthlyFormulaupdatethreshold": "This forecast error threshold can be updated per planning unit by the program administrator in the \"\"Update Planning Units\"\" screen. The default forecast error threshold is 50%.",
   "static.dashboard.shipmentGlobalDemandViewheader": "Shipment Overview",
   "static.supplyPlan.duplicateShipment": "Duplicate shipment",
   "static.user.username": "Name",
@@ -1082,6 +1089,7 @@
   "static.program.deleteLocalProgramSuccess": "Local Program(s) deleted successfully",
   "static.report.lowstock": "Below Min",
   "static.program.delivedtoreceivedleadtime": "`Delivered to Received` Lead Time (months)",
+  "static.report.forecastErrorMonthlyFormulaupdateindicates": "indicates that the",
   "static.program.programDisplayName": "Program Code",
   "static.budget.budgetCodeText": "Enter Budget Code",
   "static.supplyplan.inconsistent": "Found inconsistency. Please refresh the page.",
@@ -1279,6 +1287,7 @@
   "static.dashboard.erpLinkingDownloaded": "Linked Shipments (Downloaded)",
   "static.extrapolation.beta": "Beta",
   "static.dashboard.uploadedDateTooltip": "The date this version (draft or final) was uploaded to the server",
+  "static.problemReport.noreviewneededDesc": "The submitted supply plan does not need to be reviewed. The Supply Plan Reviewer will use this status when a supply plan has been accidentally uploaded as a duplicate or uploaded outside of the designated supply plan submission period.",
   "static.forecastingUnit.forecastingUnitName": "Forecasting Unit Name",
   "static.extrapolation.tripleExponential": "Triple-Exponential Smoothing (TES, Holt-Winters)",
   "static.user.validphonemindigit": "Phone number must be at least 6 digits",
@@ -1499,7 +1508,7 @@
   "static.formula.suggestedText95": "Step 2: Aug 2023 Ending Balance is 0",
   "static.formula.suggestedText96": "(N+1 and N+2)",
   "static.formula.suggestedText97": "Min Qty. Both of the next two months (Sept 2023 and Oct 2023) have Ending Balance (1,200) and (1,100) are",
-  "static.tree.oneTimeDispensing": "Calculate Using One Time Dispensing",
+  "static.tree.oneTimeDispensing": "Calculate:",
   "static.formula.suggestedText98": "Min Qty (1,000)",
   "static.formula.suggestedText91": "Unmet Demand for N (Nov 2022) = 20",
   "static.Tooltip.ProcurementsNeeded": "If there is a Procurement Gap, QAT will calculate the amount (in USD) needed to cover that gap using the Unit Price.",
@@ -1509,6 +1518,7 @@
   "static.tree.Add/EditTreeData": "Add/Edit Tree Data",
   "static.formula.suggestedText94": "Step 1: Aug 2023 AMC is not 0 or N/A",
   "static.dashboard.uploadedDate": "Uploaded Date",
+  "static.tree.monthByMonth": "Month-by-Month",
   "static.ManageTree.Add": "Add: Adds a child to the selected node.",
   "static.dashboard.addhealtharea": "Add technical area",
   "static.planningunit.capacitytext": "Enter Volume (m^3)",
@@ -1601,6 +1611,7 @@
   "static.formula.suggestedText67": "Suggested Qty = (Max Qty for N) – (Ending Balance for N)",
   "static.formula.suggestedText68": "If no, no suggested shipment",
   "static.formula.suggestedText69": "QAT puts the suggested quantity in Month N-X. In other words, X months before Month N, where X is the Distribution Lead Time.",
+  "static.problemReport.pendingapproval": "Pending Approval",
   "static.tree.monthStart": "(Month Start)",
   "static.formula.suggestedText62": "Suggested Qty = (Min Qty) – (Ending Balance for N) + (Unmet Demand for N)",
   "static.formula.suggestedText63": "3. Is product understocked (Ending Balance",
@@ -1699,6 +1710,7 @@
   "static.supplyPlanFormula.openingBalanceEx1": "Ending balance for last month",
   "static.program.healthareas": "Technical Areas",
   "static.formula.suggestedText19": "Max MOS",
+  "static.report.forecastErrorMonthlyFormula7consumption": "The Forecast Error can go above 100% and the higher the %, the less accurate the forecast is compared to the consumption",
   "static.extrapolation.missingDataNotePart2": "screen to fill in or interpolate the missing data.",
   "static.dashboad.regioncountry": "Realm Country Region",
   "static.extrapolation.missingDataNotePart1": "You have months with no actual consumption data, which will cause unexpected results in the extrapolation. Return to the ",
@@ -1947,6 +1959,7 @@
   "static.month.jun": "Jun",
   "static.supplyPlan.qatAdjustment": "QAT Adjustment",
   "static.procurementUnit.procurementUnit": "Procurement Unit",
+  "static.report.forecastErrorMonthlyFormula4UpdatePlanningFe": "This forecast error threshold can be updated per planning unit by the program administrator in the “Update Planning Units” screen. The default forecast error threshold is 50%.",
   "static.translation.labelFor": "Label for",
   "static.shipment.arrivedToreceivedLeadTime": "`Arrived to Received` Lead Time (months)",
   "static.dataEntryAndAdjustments.DefaultValue": "The default value is 100% reporting every month. The user can change this to the correct value. QAT will calculate the adjusted consumption due to underreporting. The calculation assumes that facilities that did not report any consumption had the same consumption rate as the ones that did.",
@@ -2088,8 +2101,10 @@
   "static.tree.targetEnding": "Target Ending",
   "static.message.user.duplicateacl": "Duplicate access controls found",
   "static.realmcountry.shippedToArrivedSeaLeadTime": "`Shipped to Arrived` Sea Lead Time (months)",
+  "static.report.forecastErrorMonthlyFormulaupdate41": "symbol indicates that the current month",
   "static.role.roletext": "Enter role name",
   "static.message.user.newUserTokenFailed": " Could not authenticate user",
+  "static.report.forecastErrorMonthlyFormulaupdate42": "does not contain forecast consumption, actual consumption, or both.",
   "static.Tooltip.DesiredStock": "(Desired Months of Stock * Total Forecast Quantity) / Number of Months in Forecast Period",
   "static.problemReport.issueStatus": "Problem Status",
   "static.supplyPlan.importIntoSP": "Import Into Supply Plan",
@@ -2238,6 +2253,7 @@
   "static.tree.firstMonthOfTarget": "First Month of Target",
   "static.supplyPlan.emergencyShipments": "Emergency shipments",
   "static.CompareSelect.ViewForecastingUnit": "A user may view the graph in Forecasting Unit, Equivalency Unit, and for a specific period of time. If a user choses to “Show only Forecast Period,” the graph will display only the period of time the user chose as the forecast period in the",
+  "static.tree.allInFirstMonth": "All in the First Month",
   "static.report.reorderFrequencyInMonths": "Reorder Interval (# months between reorders)",
   "static.extrapolate.noDataFound": "No actual consumption data found",
   "static.listTree.treeDetails": "Tree Details",
@@ -2361,6 +2377,7 @@
   "static.pipelineProgram.fileName": " File Name",
   "static.message.2digitDecimal": "Enter 2 digit decimal numbers (e.g.- 0.95, 10.11)",
   "static.dataEntryAndAdjustments.Mathematically": "Mathematically",
+  "static.report.forecastErrorMonthlyFormulaupdateredtext": "red text",
   "static.supplyPlan.shelfLife": "Shelf Life (months)",
   "static.commitTree.noPUorFUMapping": "You cannot upload tree with PU nodes/FU nodes that do not have Planning unit/Forecasting unit mapped to it",
   "static.scenarioPlanning.newlyAddedShipment": "Re-Planned Shipment",
@@ -2642,6 +2659,7 @@
   "static.supplyPlanFormula.inventoryTurns1L5": "Average MOS is calculated based on the MIN and the Reorder Interval",
   "static.supplyPlanFormula.inventoryTurns1L8": "The average MOS over 12 months would be  7.25",
   "static.supplyPlanFormula.inventoryTurns1L7": "If the MIN is 3 and reorder interval is 9 and the first month is a re-order month then:",
+  "static.report.forecastErrorMonthlyFormula4row": "A row in",
   "static.manualIntegration.jsonCreationDate": "JSON Requested Date",
   "static.inventory.expectedStock": "Expected Stock",
   "static.supplyPlan.duplicateAdjustments": "Duplicate adjustments",
@@ -3164,6 +3182,7 @@
   "static.problemReport.inCompliance": "In-Compliance",
   "static.ManageTree.NodeType": "Node Type",
   "static.monthlyForecast.DeterminePeriod": "will be used to determine the period of time that you would like to see in the graphical/tabular output and must be within the forecast period.",
+  "static.report.forecastErrorMonthlyFormula4redtext": "red text",
   "static.tooltip.alpha": "Alpha (level) between 0 and 1, with values close to 1 favoring recent values and values close to 0 favoring past values. \nSee Show Guidance for more.",
   "static.mt.linked": "Linked",
   "static.extrapolation.SelectionBetween": "To make the best selection between extrapolation methods for your purpose, the most important thing is first understanding which method of extrapolation is most appropriate for the expected pattern in the data.",
@@ -3349,6 +3368,7 @@
   "static.supplyPlan.batchInfoNote": "Click on 'Expired Quantity' to display batch ledger",
   "static.modelingValidation.fyOct": "Fiscal Year (e.g. FY2023 starts in Oct-22)",
   "static.report.forecastErrorMonthlyFormula6": "A planning unit labeled ` Total actual consumption for last 6 months = 0` means that the summation of the actual consumption for the usable months in the selected time window was 0.",
+  "static.report.forecastErrorMonthlyFormula8": "Only months that have both a forecast and an actual consumption record are included in the forecast error calculation. The column to the right of the Forecast Error column details how many months were included in that calculation.",
   "static.fundingsource.fundingsourcetext": "Enter funding source",
   "static.report.forecastErrorMonthlyFormula1": "The WAPE formula is using the previous 3-12 months of data depending on the selection in the ‘Time Window’ dropdown.",
   "static.realm.minPercForMode": "Min Percentage for Mode",
@@ -3513,6 +3533,7 @@
   "static.supplyPlan.inventoryType": "Inventory Type",
   "static.report.remainingBudgetAmt": "Budget remaining",
   "static.message.editBranchTemplate": "Branch Template Updated Successfully",
+  "static.report.forecastErrorMonthlyFormula4indicatesthat": "indicates that the",
   "static.UpdateplanningUnitSetting.UpdateplanningUnitSetting": "Planning Unit Settings",
   "static.compareAndSelect.selectOne": "Select one forecast for",
   "static.forecastValidation.noBranchesMissingPU": "No branches missing planning units",
@@ -3526,6 +3547,7 @@
   "static.healthArea.healthAreaName": "Technical area name",
   "static.program.planleadtime": "`Planned to Submitted` Lead Time (months)",
   "static.report.includeapproved": "Use Approved Supply Plans Only",
+  "static.report.forecastErrorMonthlyFormulaupdatecalculated": "calculated forecast error is above the forecast error threshold percentage.",
   "static.program.savedBy": "by",
   "static.forecastMonthlyErrorReport.showConsumption": "Show consumption adjusted for stock out?",
   "static.supplyPlan.currentAndFuture": "current + future",
@@ -3557,7 +3579,5 @@
   "static.currency.conversionrateusd": "Conversion rate to 1 USD",
   "static.logout.confirmLogout": "Are you sure you want to log out?",
   "static.common.node": "Node",
-  "static.pipeline.pipelineConvertorLinux": "Linux.",
-  "static.tree.allInFirstMonth":"All in the First Month",
-  "static.tree.monthByMonth":"Month-by-Month"
+  "static.pipeline.pipelineConvertorLinux": "Linux."
 }
