--- a/src/assets/img/locales/fr.json
+++ b/src/assets/img/locales/fr.json
@@ -195,6 +195,7 @@
   "static.dataentry.maxRange": "Veuillez sélectionner une plage de dates dans les 36 mois",
   "static.program.programmanager": "Gestionnaire de programme",
   "static.currency.currencysymbol": "Symbole de la devise",
+  "static.report.forecastErrorMonthlyFormula6nomonth": "Une erreur de prévision intitulée « Aucun mois dans cette période ne contient à la fois une consommation prévue et une consommation réelle » indique qu`aucun mois dans la fenêtre de temps sélectionnée n`a à la fois des enregistrements réels et prévisionnels dans le même mois.",
   "static.procurementagent.procurementagentdrafttosubmittime": "Délai d`exécution du projet à soumission (en mois)",
   "static.realm.realmCodeLength": "Entrez le nom d`affichage du Domaine (6 caractères maximum)",
   "static.realm.minCountForMode": "Nombre minimum pour le mode",
@@ -344,6 +345,7 @@
   "static.fundingSource.selectFundingSource": "Sélectionnez la source de financement",
   "static.tree.seeChildrenOf": "Voir Enfants de",
   "static.loadDeleteProgram.loadDeleteProgram": "Charger/Supprimer le programme",
+  "static.problemReport.pendingapprovalDesc": "Le plan d`approvisionnement soumis n`a pas été examiné. Une fois examiné, le plan d’approvisionnement sera renvoyé comme « Approuvé » ou « Nécessite une révision ». Si le plan d’approvisionnement n’a pas besoin d’être révisé, il sera renvoyé avec la mention « Aucune révision nécessaire ».",
   "static.report.lastmodifieddate": "Date de la dernière modification",
   "static.report.selectProgram": "Sélectionnez le programme et la version",
   "static.supplyPlan.multipleProcurementAgent": "Agents d`approvisionnement multiples",
@@ -456,6 +458,7 @@
   "static.report.qatPID": "Identifiant de produit QAT",
   "static.common.planningUnits": "unités de planification",
   "static.ManageTree.Modeling": "La modélisation",
+  "static.report.forecastErrorMonthlyFormulaupdate4": "Un mois avec un",
   "static.extrapolation.missingTESAndARIMASuccess": "Extrapolation manquante pour TES et ARIMA effectuée avec succès",
   "static.planningunit.gtinNo": "Seuls les nombres sont autorisés",
   "static.procurementAgentProcurementUnit.gtinText": "Entrez le GTIN",
@@ -494,6 +497,7 @@
   "static.ManageTree.BuildTree": "Gestion de l'arbre de prévision - Construire des arbres de prévision ",
   "static.login.loginOnline": "En ligne",
   "static.versionSettings.confirmUpdate": "Remarque : si vous avez modifié la période de prévision, vous serez redirigé vers les calculs de prévision des arbres.",
+  "static.report.forecastErrorMonthlyFormulaupdate5": "Un mois avec une erreur de prévision",
   "static.dataentry.conversionFactorTooltip": "Créé par l`utilisateur ou généré automatiquement dans l`écran Unité de reporting alternative. `*` multipliera et `/` divisera la quantité commandée (ARU) par le facteur de conversion",
   "static.report.problemTransDetails": "Détails de la transaction problématique",
   "static.supplyPlan.addNewInventory": "Ajouter des nouvelles données d`inventaire",
@@ -678,6 +682,7 @@
   "static.whatIf.removePlannedShipments": "Supprimer les expéditions planifiées",
   "static.message.duplicateOrg": "Code d`organisation en double",
   "static.stockStatus.shipmentQtyTooltipEU": "Somme des quantités expédiées des programmes sélectionnés et des unités de planification après conversion vers l`UE",
+  "static.problemReport.noreviewneeded": "Aucun examen nécessaire",
   "static.extrapolation.RangeOfObserved": "Stationnaire, où la plage des valeurs observées dans le temps oscille autour d'une moyenne. Les modèles appliqués à ces ensembles de données peuvent inclure",
   "static.supplyPlanFormula.inventoryTurns5L1": "Mettez à jour le paramètre \"planifier par\" dans",
   "static.user.agreement": "Contrat de licence de l`utilisateur final",
@@ -800,6 +805,7 @@
   "static.dimension.dimensionName": "Nom de la dimension",
   "static.program.programMaster": "Programme",
   "static.module.forecastingModule": "MODULE PRÉVISION",
+  "static.report.forecastErrorMonthlyFormula4thresholdper": "l’erreur de prévision calculée est supérieure au pourcentage du seuil d’erreur de prévision.",
   "static.technicalArea.technicalAreaCodeText": "Saisir le code du secteur technique",
   "static.extrapolation.selectExtrapolationMethod": "Sélectionner les méthodes d`extrapolation à utiliser",
   "static.supplyPlan.reorderInterval": "Intervalle de commande (mois)",
@@ -808,6 +814,7 @@
   "static.treeTable.tab1": "Nœud Agrégation/Nombre/Pourcentage",
   "static.NodeData.ModelingTransferTab": "Onglet Modélisation/Transfert",
   "static.extrapolation.SeeSections": "Voir les sections 3 et 4 ci-dessous pour une explication des méthodes d'extrapolation et comment choisir au mieux les méthodes pour votre prévision",
+  "static.report.forecastErrorMonthlyFormulaupdatethreshold": "Ce seuil d`erreur de prévision peut être mis à jour par unité de planification par l`administrateur du programme dans l`écran « Mettre à jour les unités de planification ». Le seuil d`erreur de prévision par défaut est de 50 %.",
   "static.dashboard.shipmentGlobalDemandViewheader": "Aperçu des expéditions",
   "static.supplyPlan.duplicateShipment": "Envoi en double",
   "static.user.username": "Nom",
@@ -1082,6 +1089,7 @@
   "static.program.deleteLocalProgramSuccess": "Programme (s) local (s) supprimé (s) avec succès",
   "static.report.lowstock": "En dessous de Min\n",
   "static.program.delivedtoreceivedleadtime": "Délai entre la livraison et la réception (en mois)",
+  "static.report.forecastErrorMonthlyFormulaupdateindicates": "indique que le",
   "static.program.programDisplayName": "Code du programme",
   "static.budget.budgetCodeText": "Entrez le code du budget",
   "static.supplyplan.inconsistent": "Incohérence trouvée. Veuillez actualiser la page.",
@@ -1279,6 +1287,7 @@
   "static.dashboard.erpLinkingDownloaded": "Envois liés (téléchargés)",
   "static.extrapolation.beta": "Bêta",
   "static.dashboard.uploadedDateTooltip": "La date à laquelle cette version (brouillon ou finale) a été téléchargée sur le serveur",
+  "static.problemReport.noreviewneededDesc": "Le plan d’approvisionnement soumis n’a pas besoin d’être révisé. L`examinateur du plan d`approvisionnement utilisera ce statut lorsqu`un plan d`approvisionnement a été accidentellement téléchargé en double ou téléchargé en dehors de la période de soumission du plan d`approvisionnement désignée.",
   "static.forecastingUnit.forecastingUnitName": "Nom de l`unité de prévision",
   "static.extrapolation.tripleExponential": "Lissage Exponentiel Triple (LET, Holt-Winters)",
   "static.user.validphonemindigit": "Le numéro de téléphone doit comporter au moins 6 chiffres",
@@ -1499,7 +1508,7 @@
   "static.formula.suggestedText95": "Étape 2 : Le solde final d`août 2023 est de 0",
   "static.formula.suggestedText96": "(N+1 et N+2)",
   "static.formula.suggestedText97": "Qté min. Les deux prochains mois (septembre 2023 et octobre 2023) ont un solde de fin (1 200) et (1 100) sont",
-  "static.tree.oneTimeDispensing": "Calculer en utilisant une distribution unique",
+  "static.tree.oneTimeDispensing": "Calculer:",
   "static.formula.suggestedText98": "Quantité minimale (1 000)",
   "static.formula.suggestedText91": "Demande non satisfaite de N (novembre 2022) = 20",
   "static.Tooltip.ProcurementsNeeded": "S'il y a un gap dans le plan d'approvisionnement, QAT calculera le montant (en USD) nécessaire pour couvrir cet écart en utilisant le prix unitaire.",
@@ -1509,6 +1518,7 @@
   "static.tree.Add/EditTreeData": "Ajouter/Modifier les données de l'arbre de prévision",
   "static.formula.suggestedText94": "Étape 1 : août 2023 AMC n`est pas 0 ou N/A",
   "static.dashboard.uploadedDate": "Date de téléchargement",
+  "static.tree.monthByMonth": "Mois par mois",
   "static.ManageTree.Add": "Ajouter : ajoute un noeud dérivé du nœud sélectionné.",
   "static.dashboard.addhealtharea": "Ajouter un secteur technique",
   "static.planningunit.capacitytext": "Entrer le volume (m^3)",
@@ -1601,6 +1611,7 @@
   "static.formula.suggestedText67": "Qté suggérée = (Qté max pour N) – (Solde final pour N)",
   "static.formula.suggestedText68": "Si non, aucune expédition suggérée",
   "static.formula.suggestedText69": "QAT place la quantité suggérée dans Month NX. En d`autres termes, X mois avant le mois N, où X est le délai de distribution.",
+  "static.problemReport.pendingapproval": "En attente d`approbation",
   "static.tree.monthStart": "(Mois initial)",
   "static.formula.suggestedText62": "Quantité suggérée = (Qté minimale) - (Solde final pour N) + (Demande non satisfaite pour N)",
   "static.formula.suggestedText63": "3. Le produit est-il en sous-stock (solde final",
@@ -1699,6 +1710,7 @@
   "static.supplyPlanFormula.openingBalanceEx1": "Solde final du mois dernier",
   "static.program.healthareas": "Secteurs techniques",
   "static.formula.suggestedText19": "MOS maximale",
+  "static.report.forecastErrorMonthlyFormula7consumption": "L`erreur de prévision peut dépasser 100 % et plus le %, moins la prévision est précise par rapport à la consommation.",
   "static.extrapolation.missingDataNotePart2": "Ecran pour compléter ou interpoler les données manquantes.",
   "static.dashboad.regioncountry": "Région du pays du Domaine",
   "static.extrapolation.missingDataNotePart1": "Vous avez des mois sans données de consommation réelle, ce qui entraînera des résultats inattendus dans l`extrapolation. Retourner à ",
@@ -1947,6 +1959,7 @@
   "static.month.jun": "Juin",
   "static.supplyPlan.qatAdjustment": "Ajustement QAT",
   "static.procurementUnit.procurementUnit": "Unité d`approvisionnement",
+  "static.report.forecastErrorMonthlyFormula4UpdatePlanningFe": "Ce seuil d`erreur de prévision peut être mis à jour par unité de planification par l`administrateur du programme dans l`écran « Mettre à jour les unités de planification ». Le seuil d`erreur de prévision par défaut est de 50 %.",
   "static.translation.labelFor": "Étiquette pour",
   "static.shipment.arrivedToreceivedLeadTime": "Délai «Arrivé à reçu» (en mois)",
   "static.dataEntryAndAdjustments.DefaultValue": "La valeur par défaut est 100 % de rapportage chaque mois. L'utilisateur peut le remplacer par la valeur correcte. QAT calculera la consommation ajustée en raison du sous-rapportage. Le calcul suppose que les installations qui n'ont déclaré aucune consommation avaient le même taux de consommation que celles qui l'ont fait.",
@@ -2088,8 +2101,10 @@
   "static.tree.targetEnding": "Cible finale",
   "static.message.user.duplicateacl": "Contrôles d`accès en double trouvés",
   "static.realmcountry.shippedToArrivedSeaLeadTime": "Délai de livraison maritime «expédié à arrivé» (en mois)",
+  "static.report.forecastErrorMonthlyFormulaupdate41": "Le symbole indique que le mois en cours",
   "static.role.roletext": "Entrez le nom du rôle",
   "static.message.user.newUserTokenFailed": "Impossible d`authentifier l`utilisateur",
+  "static.report.forecastErrorMonthlyFormulaupdate42": "ne contient pas la consommation prévue, la consommation réelle, ou les deux.",
   "static.Tooltip.DesiredStock": "(Nombre de Mois de stock souhaité * Quantité totale prévue) / Nombre de mois dans la période de prévision",
   "static.problemReport.issueStatus": "État du problème",
   "static.supplyPlan.importIntoSP": "Importer dans le plan d`approvisionnement",
@@ -2238,6 +2253,7 @@
   "static.tree.firstMonthOfTarget": "Premier mois de cible",
   "static.supplyPlan.emergencyShipments": "Expéditions d`urgence",
   "static.CompareSelect.ViewForecastingUnit": "Un utilisateur peut afficher le graphique en unité de prévision, unité d'équivalence et pour une période de temps spécifique. Si un utilisateur choisit d'afficher uniquement la période de prévision, le graphique n'affichera que la période de temps que l'utilisateur a choisie comme période de prévision dans le",
+  "static.tree.allInFirstMonth": "Tout au long du premier mois",
   "static.report.reorderFrequencyInMonths": "Intervalle de commande (nombre de mois entre les commandes)",
   "static.extrapolate.noDataFound": "Aucune donnée de consommation réelle trouvée",
   "static.listTree.treeDetails": "Détails de l'arbre de prévision",
@@ -2361,6 +2377,7 @@
   "static.pipelineProgram.fileName": "Nom de fichier",
   "static.message.2digitDecimal": "Entrez des nombres décimaux à 2 chiffres (par exemple: 0,95,10,11)",
   "static.dataEntryAndAdjustments.Mathematically": "Mathématiquement",
+  "static.report.forecastErrorMonthlyFormulaupdateredtext": "texte rouge",
   "static.supplyPlan.shelfLife": "Durée de vie",
   "static.commitTree.noPUorFUMapping": "Vous ne pouvez pas valider l'arbre de prévision avec des nœuds UP/UPr qui n'ont pas une UP/UPr mappée dessus",
   "static.scenarioPlanning.newlyAddedShipment": "Expédition replanifiée",
@@ -2642,6 +2659,7 @@
   "static.supplyPlanFormula.inventoryTurns1L5": "Le MOS moyen est calculé en fonction du MIN et de l'intervalle de commande",
   "static.supplyPlanFormula.inventoryTurns1L8": "Le MOS moyen sur 12 mois serait de 7,25",
   "static.supplyPlanFormula.inventoryTurns1L7": "Si le MIN est de 3 et l`intervalle de réapprovisionnement est de 9 et que le premier mois est un mois de réapprovisionnement alors :",
+  "static.report.forecastErrorMonthlyFormula4row": "Une rangée dans",
   "static.manualIntegration.jsonCreationDate": "Date demandée JSON",
   "static.inventory.expectedStock": "Stock attendu",
   "static.supplyPlan.duplicateAdjustments": "Ajustements en double",
@@ -3164,6 +3182,7 @@
   "static.problemReport.inCompliance": "En conformité",
   "static.ManageTree.NodeType": "Type de nœud",
   "static.monthlyForecast.DeterminePeriod": "sera utilisé pour déterminer la période de temps que vous aimeriez voir sur le graphique/Tableau et doit être comprise dans la période de prévision.",
+  "static.report.forecastErrorMonthlyFormula4redtext": "texte rouge",
   "static.tooltip.alpha": "Alpha (niveau) compris entre 0 et 1, avec des valeurs proches de 1 favorisant les valeurs récentes et des valeurs proches de 0 favorisant les valeurs passées.",
   "static.mt.linked": "Lié",
   "static.extrapolation.SelectionBetween": "Pour faire la meilleure sélection entre les méthodes d'extrapolation pour votre objectif, la chose la plus importante est d'abord de comprendre quelle méthode d'extrapolation est la plus appropriée pour le modèle attendu dans les données.",
@@ -3349,6 +3368,7 @@
   "static.supplyPlan.batchInfoNote": "Cliquez sur 'Quantité expirée' pour afficher le grand livre des lots",
   "static.modelingValidation.fyOct": "Année fiscale (par exemple, l'exercice 2023 commence en octobre 22)",
   "static.report.forecastErrorMonthlyFormula6": "Une unité de planification intitulée «Consommation réelle totale des 6 derniers mois = 0» signifie que la somme de la consommation réelle pour les mois utilisables dans la fenêtre de temps sélectionnée était de 0.",
+  "static.report.forecastErrorMonthlyFormula8": "Seuls les mois pour lesquels il existe à la fois un enregistrement de consommation prévue et un enregistrement de consommation réelle sont inclus dans le calcul de l`erreur de prévision. La colonne à droite de la colonne Erreur de prévision détaille le nombre de mois inclus dans ce calcul.",
   "static.fundingsource.fundingsourcetext": "Saisir la source de financement",
   "static.report.forecastErrorMonthlyFormula1": "La formule WAPE utilise les 3 à 12 mois de données précédents en fonction de la sélection dans la liste déroulante «Fenêtre de temps».",
   "static.realm.minPercForMode": "Pourcentage minimum pour le mode",
@@ -3513,6 +3533,7 @@
   "static.supplyPlan.inventoryType": "Type d`inventaire",
   "static.report.remainingBudgetAmt": "Budget restant",
   "static.message.editBranchTemplate": "Modèle de branche mis à jour avec succès",
+  "static.report.forecastErrorMonthlyFormula4indicatesthat": "indique que le",
   "static.UpdateplanningUnitSetting.UpdateplanningUnitSetting": "Paramètres d'unité de planification",
   "static.compareAndSelect.selectOne": "Sélectionnez une prévision pour",
   "static.forecastValidation.noBranchesMissingPU": "Aucune branche ne manque d'unités de planification",
@@ -3526,6 +3547,7 @@
   "static.healthArea.healthAreaName": "Nom du secteur technique",
   "static.program.planleadtime": "Délai entre la plannification et la soumission `Planifié à soumis` (en mois)",
   "static.report.includeapproved": "Utiliser uniquement le plan d`approvisionnement approuvé",
+  "static.report.forecastErrorMonthlyFormulaupdatecalculated": "l’erreur de prévision calculée est supérieure au pourcentage du seuil d’erreur de prévision.",
   "static.program.savedBy": "par",
   "static.forecastMonthlyErrorReport.showConsumption": "Afficher la consommation ajustée aux ruptures de stock ?",
   "static.supplyPlan.currentAndFuture": "actuel + futur",
