--- a/src/assets/img/locales/sp.json
+++ b/src/assets/img/locales/sp.json
@@ -195,6 +195,7 @@
   "static.dataentry.maxRange": "Seleccione el rango de fechas dentro de los 36 meses",
   "static.program.programmanager": "Gestor del programa",
   "static.currency.currencysymbol": "Símbolo de la divisa",
+  "static.report.forecastErrorMonthlyFormula6nomonth": "Un error de pronóstico etiquetado como \"\"Ningún mes en este período contiene consumo real y pronosticado\"\" indica que no hay meses en la ventana de tiempo seleccionada que tengan registros tanto reales como pronosticados en el mismo mes.",
   "static.procurementagent.procurementagentdrafttosubmittime": "tiempo de espera desde el borrador del pedido hasta el envío del pedido (meses)",
   "static.realm.realmCodeLength": "Ingresar el código del ámbito (máx 6 caracteres)",
   "static.realm.minCountForMode": "Conteo mínimo para la moda",
@@ -344,6 +345,7 @@
   "static.fundingSource.selectFundingSource": "Seleccionar la fuente de financiamiento",
   "static.tree.seeChildrenOf": "Ver hijos de",
   "static.loadDeleteProgram.loadDeleteProgram": "Descargar/Borrar programa",
+  "static.problemReport.pendingapprovalDesc": "El plan de suministro presentado no ha sido revisado. Una vez revisado, el plan de suministro se devolverá como \"\"Aprobado\"\" o \"\"Necesita revisión\"\". Si no es necesario revisar el plan de suministro, se devolverá como \"\"No se necesita revisión\"\".",
   "static.report.lastmodifieddate": "Fecha de última modificación",
   "static.report.selectProgram": "Seleccionar programa y versión",
   "static.supplyPlan.multipleProcurementAgent": "Múltiples agentes de compras",
@@ -456,6 +458,7 @@
   "static.report.qatPID": "ID de producto",
   "static.common.planningUnits": "productos (planificación)",
   "static.ManageTree.Modeling": "Modelado",
+  "static.report.forecastErrorMonthlyFormulaupdate4": "Un mes con un",
   "static.extrapolation.missingTESAndARIMASuccess": "Falta extrapolación para TES y ARIMA realizada con éxito",
   "static.planningunit.gtinNo": "Solo se permiten números",
   "static.procurementAgentProcurementUnit.gtinText": "Ingresar GTIN",
@@ -494,6 +497,7 @@
   "static.ManageTree.BuildTree": "Administrar árbol de estimación - Construir árboles de estimación",
   "static.login.loginOnline": "En línea",
   "static.versionSettings.confirmUpdate": "Nota: Si cambió el período de pronóstico, será redirigido a los cálculos de pronóstico de árboles.",
+  "static.report.forecastErrorMonthlyFormulaupdate5": "Un mes con el error de previsión en",
   "static.dataentry.conversionFactorTooltip": "Creado por el usuario o generado automáticamente en la pantalla Unidad de informes alternativa. `*` multiplicará y `/` dividirá la Cantidad del pedido (ARU) por el Factor de conversión",
   "static.report.problemTransDetails": "Detalles de la transacción del problema",
   "static.supplyPlan.addNewInventory": "Agregar nuevos datos de inventario",
@@ -678,6 +682,7 @@
   "static.whatIf.removePlannedShipments": "Eliminar envíos planificados",
   "static.message.duplicateOrg": "Código de organización duplicado",
   "static.stockStatus.shipmentQtyTooltipEU": "Suma de las cantidades de envío de los programas y unidades de planificación seleccionados después de la conversión a la UE",
+  "static.problemReport.noreviewneeded": "No se necesita revisión",
   "static.extrapolation.RangeOfObserved": "Estacionario, donde el rango de valores observados a lo largo del tiempo ronda un promedio. Los modelos aplicados a dichos conjuntos de datos pueden incluir",
   "static.supplyPlanFormula.inventoryTurns5L1": "Actualice la configuración \"planificar por\" en",
   "static.user.agreement": "Acuerdo de uso",
@@ -800,6 +805,7 @@
   "static.dimension.dimensionName": "Nombre de la dimensión",
   "static.program.programMaster": "Programa",
   "static.module.forecastingModule": "MÓDULO DE ESTIMACIÓN",
+  "static.report.forecastErrorMonthlyFormula4thresholdper": "El error de pronóstico calculado está por encima del porcentaje del umbral de error de pronóstico.",
   "static.technicalArea.technicalAreaCodeText": "Ingresar el código del área técnica",
   "static.extrapolation.selectExtrapolationMethod": "Seleccione los métodos de extrapolación que se utilizarán",
   "static.supplyPlan.reorderInterval": "Frecuencia de reorden (meses)",
@@ -808,6 +814,7 @@
   "static.treeTable.tab1": "Nodo Agregación/Número/Porcentaje",
   "static.NodeData.ModelingTransferTab": "Pestaña Modelado/Transferencia",
   "static.extrapolation.SeeSections": "Consulte las secciones 3 y 4 a continuación para obtener una explicación de los métodos de extrapolación y cómo elegir mejor los métodos para su estimación.",
+  "static.report.forecastErrorMonthlyFormulaupdatethreshold": "El administrador del programa puede actualizar este umbral de error de pronóstico por unidad de planificación en la pantalla \"\"Actualizar unidades de planificación\"\". El umbral de error de pronóstico predeterminado es del 50%.",
   "static.dashboard.shipmentGlobalDemandViewheader": "Información General de los Pedidos",
   "static.supplyPlan.duplicateShipment": "Pedido duplicado",
   "static.user.username": "Nombre",
@@ -1082,6 +1089,7 @@
   "static.program.deleteLocalProgramSuccess": "Programa/s local/es eliminado/s correctamente",
   "static.report.lowstock": "Por debajo del Mín\n",
   "static.program.delivedtoreceivedleadtime": "Tiempo de espera desde entregado hasta recibido (en meses)",
+  "static.report.forecastErrorMonthlyFormulaupdateindicates": "indica que el",
   "static.program.programDisplayName": "Código del programa",
   "static.budget.budgetCodeText": "Ingresar el código del presupuesto",
   "static.supplyplan.inconsistent": "Inconsistencia encontrada. Por favor actualice la página.",
@@ -1279,6 +1287,7 @@
   "static.dashboard.erpLinkingDownloaded": "Envíos Vinculados (Descargado)",
   "static.extrapolation.beta": "Beta",
   "static.dashboard.uploadedDateTooltip": "La fecha en que esta versión (borrador o final) se cargó en el servidor",
+  "static.problemReport.noreviewneededDesc": "No es necesario revisar el plan de suministro presentado. El revisor del plan de suministro utilizará este estado cuando un plan de suministro se cargó accidentalmente como un duplicado o se cargó fuera del período de presentación del plan de suministro designado.",
   "static.forecastingUnit.forecastingUnitName": "Nombre del producto (estimación)",
   "static.extrapolation.tripleExponential": "Suavizado triple exponencial (STE, Holt-Winters)",
   "static.user.validphonemindigit": "El número de teléfono debe tener al menos 6 dígitos",
@@ -1499,7 +1508,7 @@
   "static.formula.suggestedText95": "Paso 2: el stock final de agosto de 2023 es 0",
   "static.formula.suggestedText96": "(N+1 y N+2)",
   "static.formula.suggestedText97": "Cantidad Mín. Los próximos dos meses (septiembre de 2023 y octubre de 2023) tienen stocks finales (1200) y (1100) son",
-  "static.tree.oneTimeDispensing": "Calcular utilizando una dispensación única",
+  "static.tree.oneTimeDispensing": "Calcular:",
   "static.formula.suggestedText98": "Cantidad mínima (1,000)",
   "static.formula.suggestedText91": "Demanda insatisfecha de N (noviembre de 2022) = 20",
   "static.Tooltip.ProcurementsNeeded": "Si hay una brecha de adquisiciones, QAT calculará la cantidad (en USD) necesaria para cubrir esa brecha usando el precio unitario.",
@@ -1509,6 +1518,7 @@
   "static.tree.Add/EditTreeData": "Agregar / editar datos de árbol de estimación",
   "static.formula.suggestedText94": "Paso 1: agosto de 2023 AMC no es 0 o N/A",
   "static.dashboard.uploadedDate": "Fecha de subida",
+  "static.tree.monthByMonth": "Mes a mes",
   "static.ManageTree.Add": "Agregar: agrega un nodo derivado al nodo seleccionado.",
   "static.dashboard.addhealtharea": "Agregar área técnica",
   "static.planningunit.capacitytext": "Ingresar volumen en m^3",
@@ -1601,6 +1611,7 @@
   "static.formula.suggestedText67": "Cantidad sugerida = (Cantidad máxima para N) – (Stock final para N)",
   "static.formula.suggestedText68": "Si no, no hay pedido sugerido",
   "static.formula.suggestedText69": "QAT pone la cantidad sugerida en Mes NX. En otras palabras, X meses antes del Mes N, donde X es el Plazo de entrega de distribución.",
+  "static.problemReport.pendingapproval": "Pendiente de aprobación",
   "static.tree.monthStart": "(Inicio del mes)",
   "static.formula.suggestedText62": "Cantidad sugerida = (Cantidad mínima) – (Stock final para N) + (Demanda insatisfecha para N)",
   "static.formula.suggestedText63": "3. ¿Hay escasez de stock del producto (Stock final ",
@@ -1699,6 +1710,7 @@
   "static.supplyPlanFormula.openingBalanceEx1": "Stock final del mes anterior",
   "static.program.healthareas": "Áreas Técnicas",
   "static.formula.suggestedText19": "MOS máx.",
+  "static.report.forecastErrorMonthlyFormula7consumption": "El error de pronóstico puede superar el 100% y cuanto mayor sea el porcentaje, menos preciso será el pronóstico en comparación con el consumo.",
   "static.extrapolation.missingDataNotePart2": "pantalla para completar o interpolar los datos faltantes.",
   "static.dashboad.regioncountry": "Región del país del dominio",
   "static.extrapolation.missingDataNotePart1": "Tiene meses sin datos de consumo real, lo que provocará resultados inesperados en la extrapolación. Volver a la ",
@@ -1947,6 +1959,7 @@
   "static.month.jun": "Jun",
   "static.supplyPlan.qatAdjustment": "Ajuste QAT",
   "static.procurementUnit.procurementUnit": "Producto (compra)",
+  "static.report.forecastErrorMonthlyFormula4UpdatePlanningFe": "El administrador del programa puede actualizar este umbral de error de pronóstico por unidad de planificación en la pantalla \"\"Actualizar unidades de planificación\"\". El umbral de error de pronóstico predeterminado es del 50%.",
   "static.translation.labelFor": "Etiqueta para",
   "static.shipment.arrivedToreceivedLeadTime": "Tiempo de espera desde llegado hasta recibido",
   "static.dataEntryAndAdjustments.DefaultValue": "El valor predeterminado es 100% de informes cada mes. El usuario puede cambiar esto al valor correcto. QAT calculará el consumo ajustado por subregistro. El cálculo asume que las instalaciones que no reportaron ningún consumo tuvieron la misma tasa de consumo que las que lo hicieron.",
@@ -2088,8 +2101,10 @@
   "static.tree.targetEnding": "Objetivo final",
   "static.message.user.duplicateacl": "Se encontraron controles de acceso duplicados",
   "static.realmcountry.shippedToArrivedSeaLeadTime": "Tiempo de espera desde en tránsito hasta llegado (en meses) por vía marítima",
+  "static.report.forecastErrorMonthlyFormulaupdate41": "El símbolo indica que el mes actual.",
   "static.role.roletext": "Ingresar el nombre del rol",
   "static.message.user.newUserTokenFailed": "No se pudo autenticar al usuario",
+  "static.report.forecastErrorMonthlyFormulaupdate42": "no contiene el consumo previsto, el consumo real o ambos.",
   "static.Tooltip.DesiredStock": "(Meses de stock deseados * Cantidad total estimada) / Número de meses en el período de estimación",
   "static.problemReport.issueStatus": "Status del problema",
   "static.supplyPlan.importIntoSP": "Importar al plan de suministro",
@@ -2238,6 +2253,7 @@
   "static.tree.firstMonthOfTarget": "Primer mes del objetivo",
   "static.supplyPlan.emergencyShipments": "Pedidos de emergencia",
   "static.CompareSelect.ViewForecastingUnit": "Un usuario puede ver el gráfico por producto (estimación) o Unidad de equivalencia, y por un período de tiempo específico. Si un usuario elige \"Mostrar solo el período de estimación\", el gráfico mostrará solo el período de tiempo que el usuario eligió como el período de estimación en el",
+  "static.tree.allInFirstMonth": "Todo en el primer mes",
   "static.report.reorderFrequencyInMonths": "Frecuencia de reorden (no. de meses entre pedidos)",
   "static.extrapolate.noDataFound": "No se encontraron datos de consumo real",
   "static.listTree.treeDetails": "Detalles del árbol de estimación",
@@ -2361,6 +2377,7 @@
   "static.pipelineProgram.fileName": "Nombre del archivo",
   "static.message.2digitDecimal": "Ingresar 2 decimales (p. ej.: 0.95, 10.11)",
   "static.dataEntryAndAdjustments.Mathematically": "Matemáticamente",
+  "static.report.forecastErrorMonthlyFormulaupdateredtext": "texto rojo",
   "static.supplyPlan.shelfLife": "Vida útil",
   "static.commitTree.noPUorFUMapping": "No puede confirmar el árbol de estimación con nodos PU/nodos FU que no tengan asignado un producto/producto (estimación)",
   "static.scenarioPlanning.newlyAddedShipment": "Pedido replanificado",
@@ -2642,6 +2659,7 @@
   "static.supplyPlanFormula.inventoryTurns1L5": "El MOS promedio se calcula en función del MIN y la frecuencia de reorden",
   "static.supplyPlanFormula.inventoryTurns1L8": "El MOS promedio durante 12 meses sería 7.25",
   "static.supplyPlanFormula.inventoryTurns1L7": "Si el MIN es 3 y el intervalo de reorden es 9 y el primer mes es un mes de reorden, entonces:",
+  "static.report.forecastErrorMonthlyFormula4row": "una fila en",
   "static.manualIntegration.jsonCreationDate": "Fecha solicitada de JSON",
   "static.inventory.expectedStock": "Stock estimado",
   "static.supplyPlan.duplicateAdjustments": "Ajustes duplicados",
@@ -3164,6 +3182,7 @@
   "static.problemReport.inCompliance": "En conformidad",
   "static.ManageTree.NodeType": "Tipo de nodo",
   "static.monthlyForecast.DeterminePeriod": "se usará para determinar el período de tiempo que le gustaría ver en la salida gráfica/tabular y debe estar dentro del período de estimación.",
+  "static.report.forecastErrorMonthlyFormula4redtext": "texto rojo",
   "static.tooltip.alpha": "Alfa (nivel) entre 0 y 1, con valores cercanos a 1 favoreciendo valores recientes y valores cercanos a 0 favoreciendo valores pasados.",
   "static.mt.linked": "Vinculado",
   "static.extrapolation.SelectionBetween": "Para hacer la mejor selección entre los métodos de extrapolación para su propósito, lo más importante es primero comprender qué método de extrapolación es el más apropiado para el patrón esperado en los datos.",
@@ -3349,6 +3368,7 @@
   "static.supplyPlan.batchInfoNote": "Haga clic en 'Cantidad vencida' para mostrar el registro de lotes",
   "static.modelingValidation.fyOct": "Año fiscal (por ejemplo, el año fiscal 2023 comienza el 22 de octubre)",
   "static.report.forecastErrorMonthlyFormula6": "Un producto con la etiqueta `Consumo total real de los últimos 6 meses = 0` significa que la suma del consumo real de los meses utilizables en la ventana de tiempo seleccionada fue 0.",
+  "static.report.forecastErrorMonthlyFormula8": "Sólo los meses que tienen un registro de consumo real y de pronóstico se incluyen en el cálculo del error de pronóstico. La columna a la derecha de la columna Error de pronóstico detalla cuántos meses se incluyeron en ese cálculo.",
   "static.fundingsource.fundingsourcetext": "Ingresar la fuente de financiamiento",
   "static.report.forecastErrorMonthlyFormula1": "La fórmula WAPE utiliza los datos de los 3 a 12 meses anteriores, según la selección en el menú desplegable `Ventana de tiempo`.",
   "static.realm.minPercForMode": "Porcentaje mínimo para la moda",
@@ -3513,6 +3533,7 @@
   "static.supplyPlan.inventoryType": "Tipo de inventario",
   "static.report.remainingBudgetAmt": "Monto restante",
   "static.message.editBranchTemplate": "Plantilla de sucursal actualizada con éxito",
+  "static.report.forecastErrorMonthlyFormula4indicatesthat": "indica que el",
   "static.UpdateplanningUnitSetting.UpdateplanningUnitSetting": "Configuración del producto",
   "static.compareAndSelect.selectOne": "Seleccione una estimación para",
   "static.forecastValidation.noBranchesMissingPU": "No hay ramas sin productos (planificación)",
@@ -3526,6 +3547,7 @@
   "static.healthArea.healthAreaName": "Nombre del área técnica",
   "static.program.planleadtime": "Tiempo de espera desde planificado hasta ordenado (en meses)",
   "static.report.includeapproved": "Utilizar únicamente plan de suministro aprobado",
+  "static.report.forecastErrorMonthlyFormulaupdatecalculated": "El error de pronóstico calculado está por encima del porcentaje del umbral de error de pronóstico.",
   "static.program.savedBy": "por",
   "static.forecastMonthlyErrorReport.showConsumption": "¿Mostrar el consumo ajustado por desabastecimiento?",
   "static.supplyPlan.currentAndFuture": "presente + futuro",
